--- a/index.html
+++ b/index.html
@@ -88,10 +88,16 @@
                             <li>
                                 <img src="./img/tick_light.svg" alt="">
                                 All 100+ Courses
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
                             </li>
                             <li>
                                 <img src="./img/tick_light.svg" alt="">
                                 All 4 Certificate Programs
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
                             </li>
                             <li>
                                 <img src="./img/tick_light.svg" alt="">
@@ -121,14 +127,23 @@
                             <li>
                                 <img src="./img/tick_dark.svg" alt="">
                                 Premium Email Support
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
                             </li>
                             <li>
                                 <img src="./img/tick_dark.svg" alt="">
                                 Model Review & Feedback
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
                             </li>
                             <li>
                                 <img src="./img/tick_dark.svg" alt="">
                                 Additional Case Studies
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
                             </li>
                             <li>
                                 <img src="./img/tick_dark.svg" alt="">
@@ -158,7 +173,14 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">All 100+ Courses</th>
+                        <th scope="row">
+                            <div class="">
+                                All 100+ Courses
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="подсказок по умолчанию">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_yes_light.svg" alt="">
                         </td>
@@ -167,7 +189,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">All Certificate Programs</th>
+                        <th scope="row">
+                            <div class="">
+                                All Certificate Programs
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_yes_light.svg" alt="">
                         </td>
@@ -230,7 +259,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"></th>
+                        <th scope="row">
+                            <div class="">
+                                Exclusive Partner Integrations
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_no.svg" alt="">
                         </td>
@@ -239,7 +275,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"></th>
+                        <th scope="row">
+                            <div class="">
+                                Premium Email Support
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_no.svg" alt="">
                         </td>
@@ -248,7 +291,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"></th>
+                        <th scope="row">
+                            <div class="">
+                                Model Review & Feedback
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_no.svg" alt="">
                         </td>
@@ -257,7 +307,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"></th>
+                        <th scope="row">
+                            <div class="">
+                                Additional Case Studies
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
                         <td>
                             <img src="./img/tick_no.svg" alt="">
                         </td>
@@ -266,7 +323,25 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row"></th>
+                        <th scope="row">
+                            <div class="">
+                                Résumé & Cover Letter Review
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Default tooltip. Here you’ll find something useful">
+                                    <img src="./img/button_popup.svg" alt="">
+                                </a>
+                            </div>
+                        </th>
+                        <td>
+                            <img src="./img/tick_no.svg" alt="">
+                        </td>
+                        <td>
+                            <img src="./img/tick_yes_dark.svg" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            One FREE Financial Modeling Competition Entry
+                        </th>
                         <td>
                             <img src="./img/tick_no.svg" alt="">
                         </td>
@@ -468,37 +543,103 @@
                 <br>
                 Curabitur at erat eget eros aliquam mattis
             </h4>
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
+            <div id="carouselExample" class="carousel slide d-flex">
+                <div class="carousel-inner d-flex">
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col">
-                                <img src="./img/tick_dark.svg" alt="">123123
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col">
-                                <img src="./img/tick_dark.svg" alt="">123123123123
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col">
-                                <img src="./img/tick_dark.svg" alt="">123123
-                            </div>
-                            <div class="col">
-                                <img src="./img/tick_dark.svg" alt="">123123
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col">
-                                <img src="./img/tick_light.svg" alt="">
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col">
-                                <img src="./img/tick_light.svg" alt="">
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col">
-                                <img src="./img/tick_light.svg" alt="">
-                            </div>
-                            <div class="col">
-                                <img src="./img/tick_light.svg" alt="">
+                                <div class="card">
+                                    <div class="heading">
+                                        <img src="./img/card_avatar.svg" alt="">
+                                        <div class="card__name">
+                                            <h6>John Doe</h6>
+                                            <p>Financial Controller</p>
+                                        </div>
+                                    </div>
+                                    <div class="card__text">
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at erat eget eros aliquam mattis ut vehicula sapien. Nam a tortor nulla. Sed sed erat eget enim feugiat dapibus et non justo ...”</p>
+                                        <a class="card__link" href="#">Read more</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -525,6 +666,8 @@
                 </button>
             </div>
         </section>
+       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
