--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <input
                             class="form-control me-2 d-flex "
                             type="search"
-                            placeholder="Search for courses, lessons, resources an..."
+                            placeholder="Search for courses, lessons, resources and more"
                             aria-label="Поиск"
                         >
                     </form>
@@ -38,7 +38,7 @@
                         </div>
                         <div class="links__auth">
                             <a href="#">Login</a>
-                            <button class="btn">Get Started</button>
+                            <button class="button">Get Started</button>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                                     (pay per month)
                                 </label>
                             </div>
-                            <button class="bill__enroll">Enroll Now</button>
+                            <button class="button">Enroll Now</button>
                         </div>
                         <p>Includes:</p>
                         <ul class="bill__details">
@@ -125,7 +125,7 @@
                                 <b class="option__med">/month</b>
                                 (pay per month)
                             </div>
-                            <button class="bill__enroll">Enroll Now</button>
+                            <button class="button">Enroll Now</button>
                         </div>
                         <p>Everything in Basic, plus:</p>
                         <ul class="bill__details">
@@ -375,12 +375,12 @@
                         <td>
                             <h6 class="table__plan-heading">Basic</h6>
                             <p class="details__abovetext">$564 / year</p>
-                            <button class="bill__enroll bill__enroll-basic">Enroll Now</button>
+                            <button class="button bill__enroll-basic">Enroll Now</button>
                         </td>
                         <td>
                             <h6 class="table__plan-heading">Full immersion</h6>
                             <p class="details__abovetext">$924 / year</p>
-                            <button class="bill__enroll bill__enroll-pro">Enroll Now</button>
+                            <button class="button bill__enroll-pro">Enroll Now</button>
                         </td>
                     </tr>
                 </tfoot>
