important naming fix

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <p class="fact">Most benefits!</p>
                     <div class="content">
                         <p class="bill__abovetext">All-access membership</p>
-                        <h4 class="bill__title">Badass</h4>
+                        <h4 class="bill__title">Full-Immersion</h4>
                         <p class="bill__summary">Everything in the Basic plan, plus more</p>
                         <div class="options">
                             <div class="options__checkbox">
