--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
                 <ul class="faq__list">
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question 1</p>
+                            <p class="faq__item-text">Can I download the Excel files and financial modeling templates?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample1"
                                 aria-expanded="false"
                                 aria-controls="collapseExample1"
@@ -411,10 +411,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">How long do I have to complete the course?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample2"
                                 aria-expanded="false"
                                 aria-controls="collapseExample2"
@@ -430,10 +430,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">Are CFI courses verified?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample3"
                                 aria-expanded="false"
                                 aria-controls="collapseExample3"
@@ -449,10 +449,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">Are there additional fees or costs?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample4"
                                 aria-expanded="false"
                                 aria-controls="collapseExample4"
@@ -468,10 +468,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">What currency are your courses priced in?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample5"
                                 aria-expanded="false"
                                 aria-controls="collapseExample5"
@@ -487,10 +487,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">How do I earn my certificates?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample6"
                                 aria-expanded="false"
                                 aria-controls="collapseExample6"
@@ -506,10 +506,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">Can I email the instructor if I have questions?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample7"
                                 aria-expanded="false"
                                 aria-controls="collapseExample7"
@@ -525,10 +525,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">Wil these courses help me advanced my career?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample8"
                                 aria-expanded="false"
                                 aria-controls="collapseExample8"
@@ -544,10 +544,10 @@
                     </li>
                     <li class="faq__item">
                         <div class="faq__content d-flex justify-content-between">
-                            <p class="faq__item-text">The text of the question</p>
+                            <p class="faq__item-text">More questions?</p>
                             <button
                                 type="button"
-                                data-bs-toggle="collapse"
+                                data-bs-toggle="collapse" class="button"
                                 data-bs-target="#collapseExample9"
                                 aria-expanded="false"
                                 aria-controls="collapseExample9"
